--- a/templates/default/netdev/netdevnodes.html
+++ b/templates/default/netdev/netdevnodes.html
@@ -122,7 +122,9 @@
 												text="<span class=\"nobr\">{trans("Link type:")} {$_LINKTYPES[$node.linktype]}<br>{if $node.linktype == $smarty.const.LINKTYPE_WIRELESS && $node.radiosector}{trans("Radio sector:")} {$node.radiosector}<br>{/if}{if $node.linktechnology}{trans("Link technology:")} {$_LINKTECHNOLOGIES[$node.linktype][$node.linktechnology]}<br>{/if}{trans("Link speed:")} {$_LINKSPEEDS[$node.linkspeed]}</span>"}>
 									</i>
 								</span>
-								[{if $node.port}{$node.port}{else}-{/if}]
+								<span id="node-link-port-{$node.id}">
+									[{if $node.port}{$node.port}{else}-{/if}]
+								</span>
 							</div>
 							<div class="lms-ui-tab-table-column network" data-target-url="?m=nodeinfo&id={$node.id}">
 								<i class="lms-ui-icon-ipnetwork"></i> {$node.netname} / {$node.ip}
