--- a/templates/default/netdev/netlinkproperties.html
+++ b/templates/default/netdev/netlinkproperties.html
@@ -14,14 +14,14 @@
 <div id="overDiv" style="position: absolute; visibility: hidden; z-index: 100;"></div>
 <script type="text/javascript" src="js/overlib.js"></script>
 	<FORM name="netlinkproperties" method="GET">
-	<table id="propertiestable" style="width: 100%;" cellpadding="3">
+	<table id="propertiestable" class="lmsbox-inner" cellpadding="3">
 		<tr class="light">
 			<td style="width: 1%; white-space: nowrap;">{trans("Link type:")}</td>
 			<td style="width: 99%;">
 				<select name="linktype" id="linktype" {tip text="Select link type"} style="width: 100%;" onchange="change_linktype(this.options[this.selectedIndex].value)">
-					<option value="0"{if $link.type==0} selected{/if}>{trans("wire")}</option>
-					<option value="1"{if $link.type==1} selected{/if}>{trans("wireless")}</option>
-					<option value="2"{if $link.type==2} selected{/if}>{trans("fiber")}</option>
+					<option value="0"{if $link.type == $smarty.const.LINKTYPE_WIRE} selected{/if}>{trans("wire")}</option>
+					<option value="1"{if $link.type == $smarty.const.LINKTYPE_WIRELESS} selected{/if}>{trans("wireless")}</option>
+					<option value="2"{if $link.type == $smarty.const.LINKTYPE_FIBER} selected{/if}>{trans("fiber")}</option>
 				</select>
 			</td>
 		</tr>
@@ -34,6 +34,13 @@
 			</td>
 		</tr>
 		<tr class="light">
+			<td class="nobr">{trans("Dest. port")}</td>
+			<td>
+				<input type="text" name="dstport" value="{if $link.dstport}{$link.dstport}{/if}" size="2"
+						{tip text="Enter port number in device to which device will be connected (optional)" trigger="dstport"}>
+			</td>
+		</tr>
+		<tr class="light">
 			<td class="nobr">{trans("Radio sector:")}</td>
 			<td>
 				<SELECT NAME="srcradiosector" id="srcradiosector" {tip trigger="srcradiosector" text="Select radio sector"}{if $link.type != 1} disabled{/if}>
@@ -42,13 +49,6 @@
 					<OPTION value="{$radiosector.id}"{if $link.type == 1 && $radiosectors.srcradiosector == $radiosector.id} selected{/if}>{$radiosector.name}</OPTION>
 					{/foreach}
 				</SELECT>
-			</td>
-		</tr>
-		<tr class="light">
-			<td class="nobr">{trans("Dest. port")}</td>
-			<td>
-				<input type="text" name="dstport" value="{if $link.dstport}{$link.dstport}{/if}" size="2"
-					{tip text="Enter port number in device to which device will be connected (optional)" trigger="dstport"}>
 			</td>
 		</tr>
 		<tr class="light">
@@ -104,8 +104,8 @@
 			</td>
 		</tr>
 		<tr class="light">
-			<td colspan="2" style="text-align: right; white-space: nowrap;">
-				<a href="javascript:submit_netlink_properties()" accesskey="s">{trans("Submit")} <img src="img/save.gif" alt=""></a>
+			<td colspan="2" class="lms-ui-box-buttons">
+				{button icon="save" label="Submit" onclick="submit_netlink_properties();"}
 			</td>
 		</tr>
 	</table>
@@ -116,77 +116,56 @@
 
 	function change_linktype(linktype) {
 		linktype = parseInt(linktype);
-		var options = xjx.$('linktechnology').options;
-		while (options.length)
-			options.remove(0);
-		options.add(new Option('{trans("- unknown -")}', 0));
+		var select = $('#linktechnology');
+		var options = '<option value="0">{trans("- unknown -")}</option>';
 		switch (linktype) {
 			case 0:
 				{foreach $_LINKTECHNOLOGIES[0] as $linktechnologyidx => $linktechnology}
-				options.add(new Option('{$linktechnology}', {$linktechnologyidx}));
+					options += '<option value="{$linktechnologyidx}">{$linktechnology}</option>';
 				{/foreach}
 				break;
 			case 1:
 				{foreach $_LINKTECHNOLOGIES[1] as $linktechnologyidx => $linktechnology}
-				options.add(new Option('{$linktechnology}', {$linktechnologyidx}));
+					options += '<option value="{$linktechnologyidx}">{$linktechnology}</option>';
 				{/foreach}
 				break;
 			case 2:
 				{foreach $_LINKTECHNOLOGIES[2] as $linktechnologyidx => $linktechnology}
-				options.add(new Option('{$linktechnology}', {$linktechnologyidx}));
+					options += '<option value="{$linktechnologyidx}">{$linktechnology}</option>';
 				{/foreach}
 				break;
 		}
-		if (xjx.$('radiosector') != null) {
-			if (linktype != 1)
-				xjx.$('radiosector').selectedIndex = 0;
-			xjx.$('radiosector').disabled = (linktype != 1);
-		} else {
-			if (linktype != 1) {
-				xjx.$('srcradiosector').selectedIndex = 0;
-				xjx.$('dstradiosector').selectedIndex = 0;
-			}
-			xjx.$('srcradiosector').disabled = (linktype != 1);
-			xjx.$('dstradiosector').disabled = (linktype != 1);
+		select.html(options);
+		if (linktype != 1) {
+			$('#radiosector,#srcradiosector,#dstradiosector').val(0);
 		}
+		$('#radiosector,#srcradiosector,#dstradiosector').prop('disabled', linktype != 1);
 	}
 
 	function change_linktechnology(linktechnology) {
 		linktechnology = parseInt(linktechnology);
-		var linktype = xjx.$('linktype').options[xjx.$('linktype').selectedIndex].value;
-		if (linktype != 1)
+		var linktype = $('#linktype').val();
+		if (linktype != 1) {
 			return;
-		if (xjx.$('radiosector') != null)
-			xjx.$('radiosector').disabled = true;
-		else {
-			xjx.$('srcradiosector').disabled = true;
-			xjx.$('dstradiosector').disabled = true;
 		}
+		$('#radiosector,#srcradiosector,#dstradiosector').prop('disabled', true);
 		xajax_get_radio_sectors_for_technology(linktechnology);
 	}
 
 	function update_radio_sector_list(radiosectors) {
 		Object.keys(radiosectors).forEach(function(control) {
-			var options = xjx.$(control).options;
-			var oldvalue = options[xjx.$(control).selectedIndex].value;
-			while (options.length)
-				options.remove(0);
-			options.add(new Option('- {trans("none")} -', 0));
+			var select = $('#' + control);
+			var oldValue = select.val();
+			var options = '';
+			options += '<option value="0">- {trans("none")} -</option>';
 			if (radiosectors[control] !== null) {
 				radiosectors[control].forEach(function(elem) {
-					var option = new Option(elem.name, elem.id);
-					if (elem.id == oldvalue)
-						option.selected = true;
-					options.add(option);
+					options += '<option value="' + elem.id + '"' + (elem.id == oldValue ? ' selected' : '') + '>' + elem.name + '</option>';
 				});
 			}
+			select.html(options);
 		});
-		if (xjx.$('radiosector') != null)
-			xjx.$('radiosector').disabled = false;
-		else {
-			xjx.$('srcradiosector').disabled = false;
-			xjx.$('dstradiosector').disabled = false;
-		}
+		$('#radiosector,#srcradiosector,#dstradiosector').prop('disabled', false);
 	}
 
 	function submit_netlink_properties() {
@@ -197,6 +176,7 @@
 		var dstradiosector = (form.elements['dstradiosector'] != null ? form.elements['dstradiosector'].value : null);
 		var srcport = (form.elements['srcport'] != null ? form.elements['srcport'].value : null);
 		var dstport = (form.elements['dstport'] != null ? form.elements['dstport'].value : null);
+		var port = (form.elements['port'] != null ? form.elements['port'].value : null);
 		var linktechnology = form.elements['linktechnology'].value;
 		var linkspeed = form.elements['linkspeed'].value;
 
@@ -207,6 +187,7 @@
 				dstradiosector: dstradiosector,
 				srcport: srcport,
 				dstport: dstport,
+				port: port,
 				technology: linktechnology,
 				speed: linkspeed
 			} );
@@ -223,15 +204,15 @@
 			$(window.parent.document).find('#dev-link-srcport-{$link.devid}').html('[' + (srcport ? srcport : '-') + ']');
 			$(window.parent.document).find('#dev-link-dstport-{$link.devid}').html('[' + (dstport ? dstport : '-') + ']');
 		{else}
-			$(window.parent.document).find('#node-link-port-{$link.devid}').html('[' + (srcport ? srcport : '-') + ']');
+			$(window.parent.document).find('#node-link-srcport-{$link.devid}').html('[' + (srcport ? srcport : '-') + ']');
 		{/if}
 
 		window.parent.popclick();
 	}
 
 	function resize_frame() {
-		var pt = xjx.$('propertiestable'),
-		h = pt.offsetHeight;
+		var pt = $('#propertiestable'),
+		h = pt[0].offsetHeight;
 		autoiframe_setsize('autoiframe', 350, Math.max(h, 10));
 	}
 
