enhancement: allow to change ports in network link properties popup (small visual fix)

--- a/templates/default/netdev/netdevnodes.html
+++ b/templates/default/netdev/netdevnodes.html
@@ -116,14 +116,14 @@
 						</div>
 						<div class="lms-ui-tab-table-wrapper taken-ports-network col-2">
 							<div class="lms-ui-tab-table-column taken-ports">
-								<span id="node-link-port-{$node.id}"
+								<span id="node-link-port-{$node.id}" class="node-link-port"
 									onClick="javascript:netlinkpropertieschoosewin('{$netdev.id}', '{$node.id}', false);">
 									<i class="{if $node.linktype == $smarty.const.LINKTYPE_WIRELESS}lms-ui-icon-wireless{elseif $node.linktype == $smarty.const.LINKTYPE_FIBER}lms-ui-icon-fiber{else}lms-ui-icon-wired{/if}"
 											{tip trigger="node-link-port-{$node.id}"
 												text="<span class=\"nobr\">{trans("Link type:")} {$_LINKTYPES[$node.linktype]}<br>{if $node.linktype == $smarty.const.LINKTYPE_WIRELESS && $node.radiosector}{trans("Radio sector:")} {$node.radiosector}<br>{/if}{if $node.linktechnology}{trans("Link technology:")} {$_LINKTECHNOLOGIES[$node.linktype][$node.linktechnology]}<br>{/if}{trans("Link speed:")} {$_LINKSPEEDS[$node.linkspeed]}</span>"}>
 									</i>
 								</span>
-								<span id="node-link-srcport-{$node.id}" class="node-link-srcport">
+								<span id="node-link-srcport-{$node.id}">
 									[{if $node.port}{$node.port}{else}-{/if}]
 								</span>
 							</div>
