--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -30,12 +30,12 @@
 				{button icon="add" label="Add plan" href="?m=numberplanadd"}
 			</TD>
 		</TR>
-		{if $listdata.total != 0}
-		<TR>
-			<TD class="lms-ui-pagination" COLSPAN="8">
-				{include file="scroller.html" loop=$numberplanlist}
-			</TD>
-		</TR>
+		{if $pagination->getTotal() != 0}
+			<tr>
+				<td class="lms-ui-pagination" colspan="8"">
+					{include file="pagination.html"}
+				</td>
+			</tr>
 		{/if}
     </THEAD>
     <TBODY>
@@ -79,12 +79,12 @@
 		{/foreach}
     </TBODY>
     <TFOOT>
-		{if $listdata.total != 0}
-		<TR>
-			<TD class="lms-ui-pagination" COLSPAN="8">
-				{include file="scroller.html" loop=$numberplanlist}
-			</TD>
-		</TR>
+		{if $pagination->getTotal() != 0}
+			<tr>
+				<td class="lms-ui-pagination" colspan="8"">
+				{include file="pagination.html"}
+				</td>
+			</tr>
 		{/if}
 		<TR>
 			<TD colspan="8" class="text-right">
