devel/improvement: modernized numberplan forms (numberplanlist)

--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -21,12 +21,12 @@
 				{trans("Template:")}
 			</TD>
 			<TD class="text-right nobr">{trans("ID:")}</TD>
-			<TD class="text-right-nobr">{trans("Example (next) number:")}</TD>
-			<TD class="text-right-nobr">{trans("No. of issued documents:")}</TD>
-			<TD class="text-right-nobr">{trans("Document type:")}</TD>
-			<TD class="text-right-nobr">{trans("Period:")}</TD>
-			<TD class="text-right-nobr">{trans("Default:")}</TD>
-			<TD class="text-right-nobr">
+			<TD class="text-right nobr">{trans("Example (next) number:")}</TD>
+			<TD class="text-right nobr">{trans("No. of issued documents:")}</TD>
+			<TD class="text-right nobr">{trans("Document type:")}</TD>
+			<TD class="text-right nobr">{trans("Period:")}</TD>
+			<TD class="text-right nobr">{trans("Default:")}</TD>
+			<TD class="text-right nobr">
 				{button icon="add" label="Add plan" href="?m=numberplanadd"}
 			</TD>
 		</TR>
