--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -3,6 +3,10 @@
 {block name=module_content}
 <!--// $Id$ //-->
 <H1>{$layout.pagetitle}</H1>
+
+<form name="numberplanlist" id="numberplanlist" method="post" action="?m={$layout.module}">
+</form>
+
 <TABLE class="lmsbox lms-ui-background-cycle">
 	<colgroup>
 		<col style="width: 93%;">
@@ -30,6 +34,35 @@
 				{button icon="add" label="Add plan" href="?m=numberplanadd"}
 			</TD>
 		</TR>
+		<tr>
+			<td colspan="8">
+				<div class="lms-ui-filter-container">
+					<div class="lms-ui-filter-definition">
+						<span class="bold">{trans("Filter")}</span>
+						<label>
+							{trans("Division")}
+							<select name="divisionid" form="numberplanlist">
+								<option value="0">{trans("- any -")}</option>
+								{foreach $divisions as $division}
+									<option value="{$division.id}"{if $division.id == $divisionid} selected{/if}
+										>{$division.label|escape}</option>
+								{/foreach}
+							</select>
+						</label>
+						<label>
+							{trans("User")}
+							<select name="userid" form="numberplanlist">
+								<option value="0">{trans("- any -")}</option>
+								{foreach $users as $user}
+									<option value="{$user.id}"{if $user.id == $userid} selected{/if}
+										>{$user.rname|escape} ({$user.login})</option>
+								{/foreach}
+							</select>
+						</label>
+					</div>
+				</div>
+			</td>
+		</tr>
 		{if $pagination->getTotal() != 0}
 			<tr>
 				<td class="lms-ui-pagination" colspan="8"">
@@ -103,12 +136,18 @@
 </TABLE>
 <script>
 
-	$('.delete-numberplan').click(function() {
-		var name = $(this).closest('tr').attr('data-name');
-		confirmDialog($t("Are you sure, you want to delete numberplan '$a'?", name), this).done(function() {
-			location.href = $(this).attr('href');
+	$(function() {
+		$('.delete-numberplan').click(function () {
+			var name = $(this).closest('tr').attr('data-name');
+			confirmDialog($t("Are you sure, you want to delete numberplan '$a'?", name), this).done(function () {
+				location.href = $(this).attr('href');
+			});
+			return false;
 		});
-		return false;
+
+		$('[form="numberplanlist"]').change(function() {
+			$('#numberplanlist').submit();
+		});
 	});
 
 </script>
