--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -7,6 +7,14 @@
 <form name="numberplanlist" id="numberplanlist" method="post" action="?m={$layout.module}">
 </form>
 
+<style>
+
+	#clear-filter {
+		cursor: pointer;
+	}
+
+</style>
+
 <TABLE class="lmsbox lms-ui-background-cycle">
 	<colgroup>
 		<col style="width: 93%;">
@@ -41,7 +49,7 @@
 						<span class="bold">{trans("Filter")}</span>
 						<label>
 							{trans("Division")}
-							<select name="divisionid" form="numberplanlist">
+							<select name="divisionid" form="numberplanlist" data-default-value="0">
 								<option value="0">{trans("- any -")}</option>
 								{foreach $divisions as $division}
 									<option value="{$division.id}"{if $division.id == $divisionid} selected{/if}
@@ -51,7 +59,7 @@
 						</label>
 						<label>
 							{trans("User")}
-							<select name="userid" form="numberplanlist">
+							<select name="userid" form="numberplanlist" data-default-value="0">
 								<option value="0">{trans("- any -")}</option>
 								{foreach $users as $user}
 									<option value="{$user.id}"{if $user.id == $userid} selected{/if}
@@ -59,6 +67,7 @@
 								{/foreach}
 							</select>
 						</label>
+						{icon name="clear" id="clear-filter"}
 					</div>
 				</div>
 			</td>
@@ -147,6 +156,21 @@
 
 		$('[form="numberplanlist"]').change(function() {
 			$('#numberplanlist').submit();
+		});
+
+		$('#clear-filter').click(function() {
+			var reloadRequired = false;
+			$(this).closest('.lms-ui-filter-definition').find('[data-default-value]').each(function() {
+				var currVal = parseInt($(this).val());
+				var defVal = parseInt($(this).attr('data-default-value'));
+				if (currVal != defVal) {
+					$(this).val(defVal);
+					reloadRequired = true;
+				}
+			});
+			if (reloadRequired) {
+				$('#numberplanlist').submit();
+			}
 		});
 	});
 
