improvement: added filter icon

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1734,3 +1734,12 @@
     content: @fa-var-user-lock;
   }
 }
+
+.lms-ui-icon-filter {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-filter;
+  }
+}
