--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -46,7 +46,7 @@
 			<td colspan="8">
 				<div class="lms-ui-filter-container">
 					<div class="lms-ui-filter-definition">
-						<span class="bold">{trans("Filter")}</span>
+						{icon name="filter" tip="Filter"}
 						<label>
 							{trans("Division")}
 							<select name="divisionid" form="numberplanlist" data-default-value="0">
