cleanup: Let's drop the 90s in HTML title tag

--- a/templates/default/node/nodegrouplistshort.html
+++ b/templates/default/node/nodegrouplistshort.html
@@ -3,7 +3,7 @@
 <html><head>
 <meta name="GENERATOR" content="LMS {$layout.lmsv}">
 {include file="language.html"}
-<title>::: LMS :::</title>
+<title>LMS</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <SCRIPT TYPE="text/javascript" SRC="js/autoiframe.js"></SCRIPT>
 <SCRIPT TYPE="text/javascript" SRC="js/common.js"></SCRIPT>
