--- a/templates/default/twofactorauth/twofactorauthcode.html
+++ b/templates/default/twofactorauth/twofactorauthcode.html
@@ -8,7 +8,7 @@
 	{include file="jquery.html" language=Localisation::getCurrentHtmlLanguage() lms_language=Localisation::getCurrentUiLanguage()}
     <link href="{ConfigHelper::getConfig('phpui.style', 'css/style.css')}" rel="stylesheet" type="text/css">
     <link href="img/lms-net.gif" rel="shortcut icon">
-    <title>::: {t a=LMS::SOFTWARE_NAME}Welcome to $a{/t} {$layout.lmsv} :::</title>
+    <title>{t a=LMS::SOFTWARE_NAME}Welcome to $a{/t} {$layout.lmsv}</title>
 	<style>
 		body {
 			justify-content: center;
