--- a/templates/default/balance/balancelist.html
+++ b/templates/default/balance/balancelist.html
@@ -217,7 +217,7 @@
                         {if $balance.covenant}-{else}{moneyf($balance.after)}{/if}
 		</TD>
 		<TD class="text-right nobr">
-			{if $balance.customerid}<A HREF="?m=customerinfo&id={$balance.customerid}">{$balance.customername|truncate:20:"&hellip;":true|escape}</A>{else} - {/if}
+			{if $balance.customerid}<A HREF="?m=customerinfo&id={$balance.customerid}">{$balance.customername|trunescape:20}</A>{else} - {/if}
 		</TD>
 		<TD>
 			{$balance.comment}
