--- a/templates/default/event/eventschedulefilter.html
+++ b/templates/default/event/eventschedulefilter.html
@@ -40,7 +40,7 @@
 									<OPTION value="{$user.id}"
 										{if is_array($filter.userid) && in_array($user.id, $filter.userid)}} selected{/if}
 										{if !$user.access} data-crossed{/if}>
-											{$user.rname|truncate:40:"&hellip;":true|escape} ({$user.login})
+											{$user.rname|trunescape:40} ({$user.login})
 									</OPTION>
 								{/if}
 							{/foreach}
