--- a/templates/default/message/messageadd.html
+++ b/templates/default/message/messageadd.html
@@ -476,7 +476,7 @@
 			<select size="4" name="message[users][]" id="user-selection" multiple class="lms-ui-multiselect"
 					{tip text="Select users"} data-default-value="{trans("- none -")}" data-shorten-to-default-value="false">
 				{foreach $users as $user}
-				<OPTION value="{$user.id}"{if isset($message.users) && in_array($user.id, $message.users)} selected{/if}>{$user.name|truncate:30:"&hellip;":true|escape}</OPTION>
+				<OPTION value="{$user.id}"{if isset($message.users) && in_array($user.id, $message.users)} selected{/if}>{$user.name|trunescape:30}</OPTION>
 				{/foreach}
 			</select>
 			<span class="bold">{trans("user group:")}</span>
