--- a/templates/default/rt/rtticketinfobox.html
+++ b/templates/default/rt/rtticketinfobox.html
@@ -51,7 +51,7 @@
 									<i class="lms-ui-icon-content lms-ui-icon-subject"></i>{trans("Subject:")}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
-									{$ticket.subject|truncate:50:"&hellip;":true|escape}
+									{$ticket.subject|trunescape:50}
 								</TD>
 							</TR>
 							{if $ticket.service != SERVICE_OTHER}
