--- a/templates/default/user/usereditbox.html
+++ b/templates/default/user/usereditbox.html
@@ -316,7 +316,7 @@
 						data-default-value="{trans("- none -")}" data-shorten-to-default-value="false">
 					{foreach $divisions as $division}
 						<option value="{$division.id}" {if isset($user_divisions) && in_array($division.id, $user_divisions)} selected{/if}>
-							{$division.label|truncate:30:"&hellip;":true|escape}
+							{$division.label|trunescape:30}
 						</option>
 					{/foreach}
 				</select>
