--- a/templates/default/rt/rtqueueviewboxrow.html
+++ b/templates/default/rt/rtqueueviewboxrow.html
@@ -38,17 +38,17 @@
 		{/foreach}
 		{if $ticket.customerid}
 			<br>
-			<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.requestor|truncate:"60":"&hellip;"|escape}</A>
+			<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.customername|trunescape:60}</A>
 		{/if}
 		{if $ticket.requestor_userid}
 		<br>
-		<A href="?m=userinfo&id={$ticket.requestor_userid}">{$ticket.requestor_username}</A>
-		{elseif $ticket.requestor_name || $ticket.requestor_mail || $ticket.requestor_phone}
+		<A href="?m=userinfo&id={$ticket.requestor_userid}">{$ticket.requestor_name|escape}</A>
+		{elseif $ticket.req || $ticket.requestor_mail || $ticket.requestor_phone}
 			<br>
-			{$ticket.requestor|escape}
-			{if $ticket.requestor_phone}<BR>{$ticket.requestor_phone}{/if}
+			{$ticket.req|escape}
+			{if $ticket.requestor_phone}<BR>{$ticket.requestor_phone|escape}{/if}
 			{if $ticket.requestor_mail}<BR>
-			<A href="mailto:{$ticket.requestor_mail}""> &lt;{$ticket.requestor_mail}&gt;</A>
+			<A href="mailto:{$ticket.requestor_mail}""> &lt;{$ticket.requestor_mail|escape}&gt;</A>
 			{/if}
 		{/if}
 	</TD>
