--- a/templates/default/rt/rtqueueviewboxrow.html
+++ b/templates/default/rt/rtqueueviewboxrow.html
@@ -28,7 +28,7 @@
 		<span><br>{trans($_RT_TYPES[$ticket.type].label)}</span>
 	</TD>
 	<TD class="valign-middle">
-		<span class="bold">{$ticket.subject|truncate:"100":"&hellip;"|escape|default:"&nbsp;"}</span>
+		<span class="bold">{$ticket.subject|trunescape:100|default:"&nbsp;"}</span>
 		{foreach $ticket.categories as $tc}
 			<a href="?m=rtqueueview&persistent-filter=-1&catid={$tc.categoryid}&s=-1&priority=all&unread=-1&o=lastmodified,desc">
 				<div class="lms-ui-category-label" style="{$tc.style}">
@@ -38,7 +38,7 @@
 		{/foreach}
 		{if $ticket.customerid}
 			<br>
-			<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.requestor|truncate:"60":"&hellip;"|escape}</A>
+			<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.requestor|trunescape:60}</A>
 		{/if}
 		{if $ticket.requestor_userid}
 		<br>
