--- a/templates/default/rt/rtqueueviewboxrow.html
+++ b/templates/default/rt/rtqueueviewboxrow.html
@@ -38,14 +38,18 @@
 		{/foreach}
 		{if $ticket.customerid}
 			<br>
-			<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.customername|trunescape:60}</A>
+			<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.requestor|trunescape:60}</A>
 		{/if}
-		{if !$ticket.customerid && $ticket.requestor_userid}<br>{/if}
 		{if $ticket.requestor_userid}
-			<a href="?m=userinfo&id={$ticket.requestor_userid}">{$ticket.requestor_name|escape}</a>
-		{elseif $ticket.req || $ticket.requestor_mail || $ticket.requestor_phone}
-			<br>{$ticket.req|escape}{if $ticket.requestor_phone} <a href="tel:{$ticket.requestor_phone|escape}{/if}
-			{if $ticket.requestor_mail}<a href="mailto:{$ticket.requestor_mail}"> {$ticket.requestor_mail|escape}</a>{/if}
+		<br>
+		<A href="?m=userinfo&id={$ticket.requestor_userid}">{$ticket.requestor_username}</A>
+		{elseif $ticket.requestor_name || $ticket.requestor_mail || $ticket.requestor_phone}
+			<br>
+			{$ticket.requestor|escape}
+			{if $ticket.requestor_phone}<BR>{$ticket.requestor_phone}{/if}
+			{if $ticket.requestor_mail}<BR>
+			<A href="mailto:{$ticket.requestor_mail}""> &lt;{$ticket.requestor_mail}&gt;</A>
+			{/if}
 		{/if}
 	</TD>
 	<TD class="valign-middle ticket-location">
