enhancement: allow to change column visibility in vlan module

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -416,6 +416,15 @@
   }
 }
 
+.lms-ui-icon-columns {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-columns;
+  }
+}
+
 .lms-ui-icon-mail,
 .lms-ui-icon-send {
   .fa-icon;
