bugfix: use trunescape instead of truncate+escape (https://github.com/lmsgit/lms/commit/5687d5df69ae73551a2c40aacc7f43ff7a3f824a#commitcomment-46964009)

--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -167,7 +167,7 @@
 													<div>
 													{if isset($properties.formatter)}{call_user_func($properties['formatter'], $contact)}{else}{$contact.contact|escape}{/if}
 													{if $contact.typestr}[{$contact.typestr}]{/if}
-													{if $contact.name} ({$contact.name|truncate:"40":"&hellip;":true|escape}){/if}
+													{if $contact.name} ({$contact.name|trunescape:40}){/if}
 													</div>
 												</TD>
 											</TR>
