--- a/templates/default/event/eventprint.html
+++ b/templates/default/event/eventprint.html
@@ -69,7 +69,7 @@
 		</TD>
 		<TD class="text-center nobr">
 			{foreach item=user from=$event.userlist}
-				{$user.name|truncate:"25":"&hellip;":true|escape}<BR>
+				{$user.name|trunescape:25}<BR>
 			{/foreach}
 		</TD>
 		<TD class="valign-top text-center nobr">
