--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -483,7 +483,8 @@
 				<OPTION value="61">{trans("with expiring contracts")}</OPTION>
 				<OPTION value="78">{trans("with expiring, active contracts")}</OPTION>
 				<OPTION VALUE="70">{trans("TERRIT not specified")}</OPTION>
-				<OPTION VALUE="74">{trans("ZIP code not specified")}</OPTION>
+				<OPTION VALUE="68">{trans("without zip (main address)")}</OPTION>
+				<OPTION VALUE="74">{trans("without zip (other addresses)")}</OPTION>
 				<OPTION value="73">{trans("with unarchived documents")}</OPTION>
 			</SELECT>
 			<label>
