--- a/templates/default/node/nodelist.html
+++ b/templates/default/node/nodelist.html
@@ -125,6 +125,7 @@
 					<OPTION VALUE="6"{if $filter.status == 6} SELECTED{/if}>{trans("Net Device not specified")}</OPTION>
 					<option value="9"{if $filter.status == 9} selected{/if}>{trans("without radio sector")}</option>
 					<OPTION VALUE="7"{if $filter.status == 7} SELECTED{/if}>{trans("with warning")}</OPTION>
+					<option value="10"{if $filter.status == 10} selected{/if}>{trans("with locks")}</option>
 					<OPTION value="8"{if $filter.status == 8} selected{/if}>{trans("without gps coords")}</OPTION>
 				</SELECT></SPAN>
 				</label>
