--- a/templates/default/node/nodelist.html
+++ b/templates/default/node/nodelist.html
@@ -53,6 +53,11 @@
 			text-align: left;
 		}
 	}
+
+	.node-lock-icon {
+		margin-left: 0.4em;
+	}
+
 </style>
 
 <H1>{$layout.pagetitle}</H1>
@@ -240,7 +245,7 @@
 			{if $node.info}
 			    {icon name="info" tip=$node.info}
 			{/if}
-			{$node.name}</A></span>
+			{$node.name}</A>{if $node.locked}{icon name="lock" tip="<!node>locked" class="node-lock-icon"}{/if}</span>
 			<br>
 			<span class="nobr{if ! $node.access} blend{/if}">
 				{icon name="customer" class="fa-fw"}
